Day3/Module2-Ingress/snake-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snake-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snake
  template:
    metadata:
      labels:
        app: snake
    spec:
      containers:
        - name: app1
          image: bhargavshah86/kube-test:v0.1
          ports:
            - containerPort: 80
