Day3/Module2-Ingress/tutum-deploymanet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tutum
spec:
  replicas: 1
  selector:
      matchLabels:
        app: hello-world
  template:
    metadata:
        labels:
          app: hello-world
    spec:
      containers:
        - name: hello-world
          image: tutum/hello-world
          ports:
            - containerPort: 80
