Day3/Module2-Ingress/snake-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snake-service
spec:
  type: ClusterIP
  selector:
    app: snake
  ports:
  - name: http
    port: 8080
    targetPort: 80
