Day3/Module2-Ingress/1-context-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gsg-first-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx  
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: tutum-service
                port:
                  number: 80
          - path: /snake
            pathType: Prefix
            backend:
              service:
                name: snake-service
                port:
                  number: 8080
