Day3/Module2-Ingress/2-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gsg-first-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx  
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hello.gsg-example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tutum-service
                port:
                  number: 80
    - host: snake.gsg-example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snake-service
                port:
                  number: 8080
